--- a/Rod.Inno.Vate.Config/appsettings.json
+++ b/Rod.Inno.Vate.Config/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RoODeConnection": "server=RTOD;database=CONFIGDB;User Id=sa;Password=Password1",
+    "MySQlCon": "server=localhost;port=3306;database=nyxadb;user id=sa;password=Password1",
+    "MongoDbCon": "mongodb://localhost:27017"
+  },
+  "allowO": {
+    "4200": "http://localhost:4200/",
+    "3010": "http://localhost:3010/",
+    "3011": "http://localhost:3011/",
+    "3012": "http://localhost:3012/"
+  },
+  "rPal": "rPal"
 }
